--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,7 +15,9 @@
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="버전정보"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:onClick="onClick"
+        />
     <TextView
         android:id="@+id/accessterms"
         android:layout_width="match_parent"
@@ -24,41 +26,20 @@
         android:text="이용약관"
         android:textSize="20sp"
         android:gravity="center"
-        android:layout_below="@id/version"
         />
+
     <TextView
-        android:id="@+id/third"
+        android:id="@+id/send"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:text="Q / A"
-        android:textSize="20sp"
+        android:clickable="false"
         android:gravity="center"
-        android:layout_below="@id/accessterms"
-        />
-    <TextView
-        android:id="@+id/four"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:text="기 타"
-        android:textSize="20sp"
-        android:gravity="center"
-        android:layout_below="@id/third"
-        />
-    <TextView
-        android:id="@+id/five"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
         android:text="고객센터 / 도움말"
-        android:textSize="20sp"
-        android:gravity="center"
-        android:layout_below="@id/four"
-        />
+        android:textSize="20sp" />
 
 
 
 
 
-</RelativeLayout>
+</LinearLayout>
