--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,77 +10,64 @@
 
 
     <ImageView
+        android:layout_marginTop="40dp"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_gravity="center"
         android:src="@drawable/intro_icon" />
 
+
+    <EditText
+        android:id="@+id/id"
+        android:layout_width="250dp"
+        android:layout_height="45dp"
+        android:hint="아이디를 입력하세요."
+        android:paddingStart="50dp"
+        android:imeOptions="actionNext"
+        android:inputType="text"
+        android:maxLines="1"
+        android:layout_marginTop="60dp"
+        android:paddingLeft="10dp"
+        android:singleLine="true"
+        android:textColor="@color/Color_white"
+        android:textColorHint="@color/Color_white_40"
+        android:background="@drawable/inputid"
+        android:textSize="12sp" />
+
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="250dp"
+        android:layout_height="45dp"
+
+        android:hint="비밀번호를 입력하세요."
+        android:paddingStart="50dp"
+        android:imeOptions="actionDone"
+        android:inputType="textPassword"
+        android:maxLines="1"
+        android:paddingLeft="10dp"
+        android:layout_marginTop="8dp"
+        android:singleLine="true"
+        android:textColor="@color/Color_white"
+        android:textColorHint="@color/Color_white_40"
+        android:background="@drawable/inputpw"
+        android:textSize="12sp" />
+
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="15dp"
-        android:src="@drawable/intro_text"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <EditText
-                android:id="@+id/id"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:paddingLeft="10dp"
-                android:layout_weight="1"
-                android:textSize="12sp"
-                android:textColor="@color/Color_black"
-                android:textColorHint="@color/Color_grey05"
-                android:hint="영문자 / 숫자 조합으로 아이디를 입력해 주세요"
-                android:singleLine="true"
-                android:maxLines="1"
-                android:imeOptions="actionNext"
-                android:inputType="text" />
-
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:paddingLeft="10dp"
-                android:layout_weight="1"
-                android:textSize="12sp"
-                android:textColor="@color/Color_black"
-                android:textColorHint="@color/Color_grey05"
-                android:hint="비밀번호를 입력해 주세요."
-                android:singleLine="true"
-                android:maxLines="1"
-                android:imeOptions="actionDone"
-                android:inputType="textPassword" />
-
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/login"
-            android:layout_width="wrap_content"
-            android:layout_height="80dp"
-            android:text="로그인"
-            android:background="#0000"/>
-
-    </LinearLayout>
-
-
-    <Button
-        android:id="@+id/go_join"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="회원가입"
+        android:id="@+id/login"
+        android:layout_width="250dp"
+        android:layout_height="45dp"
         android:layout_marginTop="10dp"
-        android:background="#0000"/>
+        android:src="@drawable/buttonlogin"/>]
+    <ImageView
+        android:layout_width="180dp"
+        android:layout_height="20dp"
+        android:src="@drawable/signuptext"
+        android:layout_marginTop="20dp"/>
+
+    <ImageView
+        android:id="@+id/go_join"
+        android:layout_width="95dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/buttonsignup"/>
 </LinearLayout>
