--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -347,7 +347,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:gravity="center"
                 >
 
@@ -363,18 +363,26 @@
                         android:layout_height="30dp"
                         android:layout_marginTop="20dp"
                         android:background="@drawable/modifybtn"
-                        android:text=" " />
+                        android:text=" "
+                        android:visibility="visible"
+                        />
 
                     <Button
                         android:id="@+id/savebtn"
-                        android:layout_width="match_parent"
+                        android:layout_width="150dp"
                         android:layout_height="40dp"
                         android:layout_margin="20dp"
                         android:background="@drawable/savebtn"
                         android:visibility="gone" />
 
                 </FrameLayout>
-
+                <Button
+                    android:id="@+id/exitbtn"
+                    android:layout_width="150dp"
+                    android:layout_height="40dp"
+                    android:layout_margin="20dp"
+                    android:background="@drawable/exitbtn"
+                    android:visibility="gone" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
