--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -347,9 +347,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:gravity="center"
-                >
+                android:orientation="horizontal">
 
                 <FrameLayout
                     android:layout_width="wrap_content"
@@ -364,8 +363,7 @@
                         android:layout_marginTop="20dp"
                         android:background="@drawable/modifybtn"
                         android:text=" "
-                        android:visibility="visible"
-                        />
+                        android:visibility="visible" />
 
                     <Button
                         android:id="@+id/savebtn"
@@ -376,6 +374,7 @@
                         android:visibility="gone" />
 
                 </FrameLayout>
+
                 <Button
                     android:id="@+id/exitbtn"
                     android:layout_width="150dp"
@@ -384,7 +383,10 @@
                     android:background="@drawable/exitbtn"
                     android:visibility="gone" />
             </LinearLayout>
+
         </LinearLayout>
+
     </ScrollView>
+
 </LinearLayout>
 
