--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -8,12 +8,11 @@
     android:layout_gravity="center"
     android:background="@android:color/transparent">
 
-
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/infoPic"
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="200dp"/>
+        android:layout_height="200dp"
+        android:layout_marginTop="10dp" />
 
     <TextView
         android:id="@+id/infoName"
