--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -124,6 +124,7 @@
                         android:layout_margin="10dp"
                         android:textSize="14sp"
                         android:textColor="@color/Color_black"
+                        android:buttonTint="@color/colorPrimary"
                         android:text="남성" />
 
                     <RadioButton
@@ -133,6 +134,7 @@
                         android:layout_margin="10dp"
                         android:textSize="14sp"
                         android:textColor="@color/Color_black"
+                        android:buttonTint="@color/colorPrimary"
                         android:text="여성" />
 
                 </RadioGroup>
