--- a/app/src/main/res/layout/activity_sendmail_setting.xml
+++ b/app/src/main/res/layout/activity_sendmail_setting.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.prograpy.app2.appdev2.environment_setting.SendMail">
+    tools:context="com.prograpy.app2.appdev2.setting.SendMail">
 
 
     <TextView
