--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -22,13 +22,28 @@
                 android:layout_height="120dp"
                 android:background="@drawable/mypagebackground" />
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/imageView"
+            <RelativeLayout
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_centerHorizontal="true"
                 android:layout_marginTop="40dp"
-                android:src="@drawable/sub_img_picture" />
+                android:layout_centerHorizontal="true">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/sub_img_picture" />
+
+                <ImageButton
+                    android:id="@+id/imageAdd"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:background="@drawable/buttoncamera"
+                    android:visibility="gone"/>
+
+            </RelativeLayout>
 
         </RelativeLayout>
     </LinearLayout>
