--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-                android:background="@color/Color_grey01">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/Color_grey01"
+              android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
@@ -15,44 +15,62 @@
         android:textColor="@color/Color_white"
         android:textSize="18sp"/>
 
-    <TextView
-        android:id="@+id/version"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_height="match_parent"
         android:gravity="center"
-        android:text="버전정보"
-        android:textSize="20sp"
-        android:textStyle="normal"
-        android:textColor="@color/Color_black"
-        android:onClick="onClick"
-        />
+        android:orientation="vertical">
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:src="@mipmap/icon"/>
 
-    <TextView
-        android:id="@+id/accessterms"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:text="이용약관"
-        android:textSize="20sp"
-        android:textStyle="normal"
-        android:textColor="@color/Color_black"
-        android:gravity="center"
-        android:onClick="onClick"
-        />
+        <LinearLayout
+            android:id="@+id/second_version"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:gravity="center">
 
-    <TextView
-        android:id="@+id/send"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:clickable="false"
-        android:gravity="center"
-        android:textStyle="normal"
-        android:textColor="@color/Color_black"
-        android:text="고객센터 / 도움말"
-        android:onClick="onClick"
-        android:textSize="20sp" />
+            <TextView
+                android:id="@+id/version_main"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="현재 버전  "
+                android:textSize="14sp"/>
+
+            <TextView
+                android:id="@+id/version_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/version_main"
+                android:text="1.0"
+                android:textColor="@android:color/background_dark"
+                android:textSize="14sp"/>
+
+        </LinearLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="현재 최신버전입니다."/>
+
+        <TextView
+            android:id="@+id/send"
+            android:layout_marginTop="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:clickable="false"
+            android:gravity="center"
+            android:onClick="onClick"
+            android:text="고객센터 / 도움말"
+            android:textColor="@color/Color_black"
+            android:textSize="20sp"
+            android:textStyle="normal"/>
+
+    </LinearLayout>
 
 </LinearLayout>
