--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -12,6 +12,7 @@
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/img_back"
         android:layout_width="70dp"
         android:layout_height="20dp"
         android:layout_gravity="left"
